[gd_scene load_steps=6 format=3 uid="uid://djcsnso72bwod"]

[ext_resource type="Script" path="res://menu/main/menu.gd" id="1_qdchn"]
[ext_resource type="Script" path="res://menu/main/video.gd" id="1_rn1fe"]
[ext_resource type="Script" path="res://menu/main/audio.gd" id="2_gryrn"]
[ext_resource type="PackedScene" uid="uid://lsnxhkvoumvj" path="res://menu/main/action_button.tscn" id="3_i1hiv"]
[ext_resource type="Script" path="res://menu/main/back.gd" id="3_t6l44"]

[node name="MainMenu" type="Node2D"]
process_mode = 3
script = ExtResource("1_qdchn")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="UI"]
modulate = Color(1, 1, 1, 0.478431)
offset_right = 1923.0
offset_bottom = 1083.0
color = Color(0, 0, 0, 1)

[node name="Menu" type="VBoxContainer" parent="UI"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -50.5
offset_right = 35.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
pivot_offset = Vector2(25, 50)

[node name="Resume" type="Button" parent="UI/Menu"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Resume"

[node name="Start" type="Button" parent="UI/Menu"]
unique_name_in_owner = true
layout_mode = 2
text = "Start"

[node name="Options" type="Button" parent="UI/Menu"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="UI/Menu"]
layout_mode = 2
text = "Quit"

[node name="Settings" type="TabContainer" parent="UI"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Video" type="TabBar" parent="UI/Settings"]
layout_mode = 2
script = ExtResource("1_rn1fe")

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Settings/Video"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.5
offset_top = -43.5
offset_right = 100.5
offset_bottom = 43.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
pivot_offset = Vector2(100, 50)

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Settings/Video/HBoxContainer"]
layout_mode = 2

[node name="FullScreen" type="Label" parent="UI/Settings/Video/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Fullscreen
"

[node name="Borderless" type="Label" parent="UI/Settings/Video/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Borderless"

[node name="Vsync" type="Label" parent="UI/Settings/Video/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Vsync"

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/Settings/Video/HBoxContainer"]
layout_mode = 2

[node name="FullScreen" type="CheckBox" parent="UI/Settings/Video/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="Borderless" type="CheckBox" parent="UI/Settings/Video/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="Vsync" type="OptionButton" parent="UI/Settings/Video/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
item_count = 4
selected = 1
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Enabled"
popup/item_1/id = 1
popup/item_2/text = "Adaptive"
popup/item_2/id = 2
popup/item_3/text = "Mailbox"
popup/item_3/id = 3

[node name="Back" type="Button" parent="UI/Settings/Video"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(4, 4)
pivot_offset = Vector2(47, 32)
text = "Back"
script = ExtResource("3_t6l44")

[node name="Audio" type="TabBar" parent="UI/Settings"]
visible = false
layout_mode = 2
script = ExtResource("2_gryrn")

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Settings/Audio"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.5
offset_top = -52.0
offset_right = 29.5
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
pivot_offset = Vector2(100, 50)

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Settings/Audio/HBoxContainer"]
layout_mode = 2

[node name="Master" type="Label" parent="UI/Settings/Audio/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Master"

[node name="Music" type="Label" parent="UI/Settings/Audio/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Music"

[node name="SFX" type="Label" parent="UI/Settings/Audio/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "SFX"

[node name="Voices" type="Label" parent="UI/Settings/Audio/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Voices"

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/Settings/Audio/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Master" type="HSlider" parent="UI/Settings/Audio/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.05
value = 1.0

[node name="Music" type="HSlider" parent="UI/Settings/Audio/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFX" type="HSlider" parent="UI/Settings/Audio/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.05
value = 1.0

[node name="Voices" type="HSlider" parent="UI/Settings/Audio/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.05
value = 1.0

[node name="MusicBusPlayer" type="AudioStreamPlayer" parent="UI/Settings/Audio"]
bus = &"Music"

[node name="SFXBusPlayer" type="AudioStreamPlayer" parent="UI/Settings/Audio"]
bus = &"SFX"

[node name="VoicesBusPlayer" type="AudioStreamPlayer" parent="UI/Settings/Audio"]
bus = &"Voices"

[node name="Back" type="Button" parent="UI/Settings/Audio"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(4, 4)
pivot_offset = Vector2(47, 32)
text = "Back"
script = ExtResource("3_t6l44")

[node name="Controls" type="TabBar" parent="UI/Settings"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Settings/Controls"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
pivot_offset = Vector2(100, 50)

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Settings/Controls/HBoxContainer"]
layout_mode = 2

[node name="Up" type="Label" parent="UI/Settings/Controls/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Up"

[node name="Down" type="Label" parent="UI/Settings/Controls/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Down
"

[node name="Left" type="Label" parent="UI/Settings/Controls/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Left"

[node name="Right" type="Label" parent="UI/Settings/Controls/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Right"

[node name="Menu" type="Label" parent="UI/Settings/Controls/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Menu"

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/Settings/Controls/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="UpActionButton" parent="UI/Settings/Controls/HBoxContainer/VBoxContainer2" instance=ExtResource("3_i1hiv")]
layout_mode = 2
size_flags_vertical = 7

[node name="DownActionButton" parent="UI/Settings/Controls/HBoxContainer/VBoxContainer2" instance=ExtResource("3_i1hiv")]
layout_mode = 2
size_flags_vertical = 7
action = "move_down"

[node name="LeftActionButton" parent="UI/Settings/Controls/HBoxContainer/VBoxContainer2" instance=ExtResource("3_i1hiv")]
layout_mode = 2
size_flags_vertical = 7
action = "move_left"

[node name="RightActionButton" parent="UI/Settings/Controls/HBoxContainer/VBoxContainer2" instance=ExtResource("3_i1hiv")]
layout_mode = 2
size_flags_vertical = 7
action = "move_right"

[node name="MenuActionButton" parent="UI/Settings/Controls/HBoxContainer/VBoxContainer2" instance=ExtResource("3_i1hiv")]
layout_mode = 2
size_flags_vertical = 7
action = "show_or_hide_menu"

[node name="Back" type="Button" parent="UI/Settings/Controls"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(4, 4)
pivot_offset = Vector2(47, 32)
text = "Back"
script = ExtResource("3_t6l44")

[connection signal="pressed" from="UI/Menu/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="UI/Menu/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="UI/Menu/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="UI/Menu/Quit" to="." method="_on_quit_pressed"]
[connection signal="toggled" from="UI/Settings/Video/HBoxContainer/VBoxContainer2/FullScreen" to="UI/Settings/Video" method="_on_full_screen_toggled"]
[connection signal="toggled" from="UI/Settings/Video/HBoxContainer/VBoxContainer2/Borderless" to="UI/Settings/Video" method="_on_borderless_toggled"]
[connection signal="item_selected" from="UI/Settings/Video/HBoxContainer/VBoxContainer2/Vsync" to="UI/Settings/Video" method="_on_vsync_item_selected"]
[connection signal="pressed" from="UI/Settings/Video/Back" to="UI/Settings/Video/Back" method="_on_pressed"]
[connection signal="value_changed" from="UI/Settings/Audio/HBoxContainer/VBoxContainer2/Master" to="UI/Settings/Audio" method="_on_master_value_changed"]
[connection signal="value_changed" from="UI/Settings/Audio/HBoxContainer/VBoxContainer2/Music" to="UI/Settings/Audio" method="_on_music_value_changed"]
[connection signal="value_changed" from="UI/Settings/Audio/HBoxContainer/VBoxContainer2/SFX" to="UI/Settings/Audio" method="_on_sfx_value_changed"]
[connection signal="value_changed" from="UI/Settings/Audio/HBoxContainer/VBoxContainer2/Voices" to="UI/Settings/Audio" method="_on_voices_value_changed"]
[connection signal="pressed" from="UI/Settings/Audio/Back" to="UI/Settings/Audio/Back" method="_on_pressed"]
[connection signal="pressed" from="UI/Settings/Controls/Back" to="UI/Settings/Controls/Back" method="_on_pressed"]
